--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -5,20 +5,25 @@ on:
     - cron: "0 */12 * * *"
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      
       - uses: Platane/snk@master
         id: snake-gif
         with:
           github_user_name: MadCkull
           svg_out_path: dist/github-contribution-grid-snake.svg
-
+          
       - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
           target_branch: output
           build_dir: dist
+          allow_orphan_branches: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
